<resources>
    <string name="app_name">Aro Music Player</string>
    <string name="sample_ad_id">ca-app-pub-3940256099942544~3347511713</string>

<!--    this is all placeholder text -->
    <string name="past_string">00:00</string>
    <string name="remain_string">3:32</string>
    <string name="song_string">song name</string>
    <string name="artist_string">artist name</string>

<!--    these are content descriptions-->
    <string name="previous_button_descrip">Previous Button</string>
    <string name="play_button_descrip">Play/Pause Button</string>
    <string name="next_button_descrip">Next Button</string>
    <string name="shuffle_button_descrip">Shuffle Button</string>

</resources>
