<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MusicPlayerActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="12dp"
        android:paddingTop="4dp"
        android:paddingRight="12dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".65" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/card_view_background"
        app:cardElevation="5dp"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_one">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_view_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/time_remaining_text_view"
                app:layout_constraintStart_toEndOf="@+id/time_elapsed_text_view" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/previous_button_descrip"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/play_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_skip_previous"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/play_button_descrip"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/next_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/previous_button"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_play_arrow"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/next_button_descrip"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/shuffle_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/play_button"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_skip_next"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/time_elapsed_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/past_string" />

            <TextView
                android:id="@+id/time_remaining_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/remain_string" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shuffle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/shuffle_button_descrip"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/next_button"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_shuffle"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/song_title_text_view_in_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/seek_bar"
                app:layout_constraintEnd_toEndOf="@+id/next_button"
                app:layout_constraintStart_toStartOf="@+id/play_button"
                app:layout_constraintTop_toBottomOf="@+id/play_button"
                tools:text="@string/song_string" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".90" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_two" />

</androidx.constraintlayout.widget.ConstraintLayout>